チャンタントゥアン　最新版

--- a/app/src/main/res/layout/activity_face_to_face_picker.xml
+++ b/app/src/main/res/layout/activity_face_to_face_picker.xml
@@ -55,6 +55,7 @@
 
 
         <LinearLayout
+            android:id="@+id/x1nn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -73,7 +74,7 @@
                 android:layout_weight="1"
                 android:id="@+id/x1k"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="結果"
@@ -118,7 +119,7 @@
                 android:layout_weight="1"
                 android:id="@+id/x2k"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="結果"
@@ -163,7 +164,7 @@
                 android:layout_weight="1"
                 android:id="@+id/x3k"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="結果"
